# cmake-basics

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  README.md  README.txt  build.bat  build.sh  tutorial.cxx
.github/: clang_format_check.yml
.github/workflows/: doxygen_check.yml  main.yml
Main/: tutorial.cxx
MathFunctions/: CMakeLists.txt  mysqrt.cxx  mysqrt.h
